add style, base and user

--- a/userAccount/templates/userAccount/base.html
+++ b/userAccount/templates/userAccount/base.html
@@ -1,25 +1,11 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Accounts</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
-        #logo{
-        }
-        body{
-            background-color: #ebeff5;
-        }
-        #total-tasks{
-            background-color: #4cb4c7;
-        }
-        tasks-completed{
-            background-color: #7abecc;
-        }
-        tasks-pending{
-            background-color: #7CD1CO;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
 </head>
 <body>
 
