add html and views functionality

--- a/userAccount/templates/userAccount/status.html
+++ b/userAccount/templates/userAccount/status.html
@@ -5,10 +5,10 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="total-tasks">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Total Tasks</h5>
+			  		<h5 class="card-title">Current Tasks</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title"></h3>
+			    	<h3 class="card-title">{{current}}</h3>
 			  	</div>
 			</div>
 		</div>
@@ -18,10 +18,10 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="tasks-completed">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Tasks Completed</h5>
+			  		<h5 class="card-title">Completed Tasks</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title"></h3>
+			    	<h3 class="card-title">{{completed}}</h3>
 			  	</div>
 			</div>
 		</div>
@@ -31,10 +31,10 @@
 		<div class="col-md">
 			<div class="card text-center text-white  mb-3" id="tasks-pending">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Tasks Pending</h5>
+			  		<h5 class="card-title">Deleted Tasks</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title"></h3>
+			    	<h3 class="card-title">{{deleted}}</h3>
 			  	</div>
 			</div>
 		</div>
