--- a/userAccount/templates/userAccount/dashboard.html
+++ b/userAccount/templates/userAccount/dashboard.html
@@ -14,10 +14,16 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create USER</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
 					<th>User</th>
-					<th>Task</th>
+					<th>Date Created</th>
 				</tr>
+
+				{% for user in users %}
+					<tr>
+						<td>{{user.name}}</td>
+						<td>{{user.date_created}}</td>
+					</tr>
+				{% endfor %}
 
 			</table>
 		</div>
@@ -34,8 +40,18 @@
 					<th>Date Created</th>
 					<th>Status</th>
 					<th>Update</th>
-					<th>Remove</th>
+					<th>Delete</th>
 				</tr>
+
+				{% for condition in conditions %}
+					<tr>
+						<td>{{condition.task}}</td>
+						<td>{{condition.status}}</td>
+						<td>{{condition.date_created}}</td>
+						<td><a href="">Update</a></td>
+						<td><a href="">Delete</a></td>
+					</tr>
+				{% endfor %}
 
 			</table>
 		</div>
