--- a/userAccount/templates/userAccount/tasks.html
+++ b/userAccount/templates/userAccount/tasks.html
@@ -13,9 +13,15 @@
 					<table class="table">
 						<tr>
 							<th>Task</th>
-							<th>Priority</th>
-							<th>Price</th>
+							<th>Date Created</th>
 						</tr>
+
+						{% for task in tasks %}
+							<tr>
+								<td>{{task.name}}</td>
+								<td>{{task.date_created}}</td>
+							</tr>
+						{% endfor %}
 
 					</table>
 				</div>
