--- a/userAccount/templates/userAccount/topbar.html
+++ b/userAccount/templates/userAccount/topbar.html
@@ -1,5 +1,7 @@
+{% load static %}
 <!--Bootstrap4 from https://getbootstrap.com/-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!--  <img src="{% static 'img/img.png' %}">-->
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
